ecmascript/parser/tests/typescript-errors/tsc/es6/yieldExpressions/YieldExpression5_es6/input.ts.stderr
error[1109]: Expected an expression
 --> $DIR/tests/typescript-errors/tsc/es6/yieldExpressions/YieldExpression5_es6/input.ts:4:1
  |
4 | }
  | ^

